// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logs should render with a no cluster found reason 1`] = `
<EuiCallOut
  color="warning"
  iconType="help"
  size="m"
  title="We did not find any logs for this cluster."
>
  <p>
    <FormattedMessage
      defaultMessage="Ensure you have a filebeat instance reading from this cluster."
      id="xpack.monitoring.logs.reason.noClusterMessage"
      values={Object {}}
    />
  </p>
</EuiCallOut>
`;

exports[`Logs should render with a no index found reason 1`] = `
<EuiCallOut
  color="warning"
  iconType="help"
  size="m"
  title="We did not find any logs for this index."
>
  <p>
    <FormattedMessage
      defaultMessage="Ensure you have a filebeat instance reading from all nodes in your cluster, or perhaps there are no logs for this index."
      id="xpack.monitoring.logs.reason.noIndexMessage"
      values={Object {}}
    />
  </p>
</EuiCallOut>
`;

exports[`Logs should render with a no index pattern found reason 1`] = `
<EuiCallOut
  color="warning"
  iconType="help"
  size="m"
  title="No filebeat indices found."
>
  <p>
    <FormattedMessage
      defaultMessage="Follow {link} to set it up. Please be sure to configure your Elasticsearch output to your monitoring cluster."
      id="xpack.monitoring.logs.reason.noIndexPatternMessage"
      values={
        Object {
          "link": <EuiLink
            color="primary"
            href="https://www.elastic.co/guide/en/beats/filebeat/current/filebeat-installation.html"
            type="button"
          >
            these directions
          </EuiLink>,
        }
      }
    />
  </p>
</EuiCallOut>
`;

exports[`Logs should render with a no node found reason 1`] = `
<EuiCallOut
  color="warning"
  iconType="help"
  size="m"
  title="We did not find any logs for this node."
>
  <p>
    <FormattedMessage
      defaultMessage="Ensure you have a filebeat instance reading from this node."
      id="xpack.monitoring.logs.reason.noNodeMessage"
      values={Object {}}
    />
  </p>
</EuiCallOut>
`;

exports[`Logs should render with a no type found reason 1`] = `
<EuiCallOut
  color="warning"
  iconType="help"
  size="m"
  title="We found filebeat indices but none for elasticsearch."
>
  <p>
    <FormattedMessage
      defaultMessage="Follow {link} to set up the elasticsearch module."
      id="xpack.monitoring.logs.reason.noTypeMessage"
      values={
        Object {
          "link": <EuiLink
            color="primary"
            href="https://www.elastic.co/guide/en/beats/filebeat/current/filebeat-module-elasticsearch.html"
            type="button"
          >
            these directions
          </EuiLink>,
        }
      }
    />
  </p>
</EuiCallOut>
`;

exports[`Logs should render with a time period reason 1`] = `
<EuiCallOut
  color="warning"
  iconType="help"
  size="m"
  title="No filebeat indices found in the selected time period."
>
  <p>
    <FormattedMessage
      defaultMessage="Please adjust your time period as necessary"
      id="xpack.monitoring.logs.reason.noIndexPatternInTimePeriodMessage"
      values={Object {}}
    />
  </p>
</EuiCallOut>
`;

exports[`Logs should render with a time period reason for both scenarios 1`] = `
<EuiCallOut
  color="warning"
  iconType="help"
  size="m"
  title="No filebeat indices found in the selected time period."
>
  <p>
    <FormattedMessage
      defaultMessage="Please adjust your time period as necessary"
      id="xpack.monitoring.logs.reason.noIndexPatternInTimePeriodMessage"
      values={Object {}}
    />
  </p>
</EuiCallOut>
`;
